apps/framework-cli/src/cli/routines/dev_tui/snapshots/moose_cli__cli__routines__dev_tui__ui__tests__snapshot_full_ui_empty.snap
---
source: apps/framework-cli/src/cli/routines/dev_tui/ui.rs
expression: output
---
" MOOSE DEV  test-project  Typescript  localhost:4000                            "
"                                                                                "
"┌ [1] LOGS (0) ────────────────────────────────┐┌ [2] INFRASTRUCTURE ──────────┐"
"│                                              ││  BOOT STATUS                 │"
"│                                              ││  ○ Initializing...           │"
"│                                              ││                              │"
"│                                              ││  SERVICES                    │"
"│                                              ││  ○ Docker      Pending       │"
"│                                              ││  ○ ClickHouse  Pending       │"
"│                                              │└──────────────────────────────┘"
"│                                              │┌ [3] RESOURCES (0) ───────────┐"
"│                                              ││                              │"
"│                                              ││  No resources yet.           │"
"│                                              ││  Waiting for infrastructure..│"
"│                                              ││                              │"
"│                                              ││                              │"
"│                                              ││                              │"
"│                                              ││                              │"
"│                                              ││                              │"
"│                                              ││                              │"
"│                                              ││                              │"
"└──────────────────────────────────────────────┘└──────────────────────────────┘"
" Filter: [a]All [w]Watch [i]Infra [s]API [e]Error                               "
" Nav: [1-3]Panel [j/k]Scroll [Enter]Select [Space]Expand [W]Wrap [q]Quit        "
