apps/framework-cli/src/cli/routines/dev_tui/snapshots/moose_cli__cli__routines__dev_tui__ui__tests__snapshot_full_ui_with_logs.snap
---
source: apps/framework-cli/src/cli/routines/dev_tui/ui.rs
expression: output
---
" MOOSE DEV  test-project  Typescript  localhost:4000                            "
"                                                                                "
"┌ [1] LOGS (10) ───────────────────────────────┐┌ [2] INFRASTRUCTURE ──────────┐"
"│12:00:00 SYS   Test message 0                 ││  BOOT STATUS                 │"
"│12:00:01 SYS   Test message 1                 ││  ○ Initializing...           │"
"│12:00:02 SYS   Test message 2                 ││                              │"
"│12:00:03 SYS   Test message 3                 ││  SERVICES                    │"
"│12:00:04 SYS   Test message 4                 ││  ○ Docker      Pending       │"
"│12:00:05 SYS   Test message 5                 ││  ○ ClickHouse  Pending       │"
"│12:00:06 SYS   Test message 6                 │└──────────────────────────────┘"
"│12:00:07 SYS   Test message 7                 │┌ [3] RESOURCES (0) ───────────┐"
"│12:00:08 SYS   Test message 8                 ││                              │"
"│12:00:09 SYS   Test message 9                 ││  No resources yet.           │"
"│                                              ││  Waiting for infrastructure..│"
"│                                              ││                              │"
"│                                              ││                              │"
"│                                              ││                              │"
"│                                              ││                              │"
"│                                              ││                              │"
"│                                              ││                              │"
"│                                              ││                              │"
"└──────────────────────────────────────────────┘└──────────────────────────────┘"
" Filter: [a]All [w]Watch [i]Infra [s]API [e]Error                               "
" Nav: [1-3]Panel [j/k]Scroll [Enter]Select [Space]Expand [W]Wrap [q]Quit        "
