apps/framework-cli/src/cli/routines/dev_tui/snapshots/moose_cli__cli__routines__dev_tui__ui__tests__snapshot_wide_terminal.snap
---
source: apps/framework-cli/src/cli/routines/dev_tui/ui.rs
expression: output
---
" MOOSE DEV  test-project  Typescript  localhost:4000                                                                    "
"                                                                                                                        "
"┌ [1] LOGS (5) ────────────────────────────────────────────────────────┐┌ [2] INFRASTRUCTURE ──────────────────────────┐"
"│12:00:00 SYS   Test message 0                                         ││  BOOT STATUS                                 │"
"│12:00:01 SYS   Test message 1                                         ││  ○ Initializing...                           │"
"│12:00:02 SYS   Test message 2                                         ││                                              │"
"│12:00:03 SYS   Test message 3                                         ││  SERVICES                                    │"
"│12:00:04 SYS   Test message 4                                         ││  ○ Docker      Pending                       │"
"│                                                                      ││  ○ ClickHouse  Pending                       │"
"│                                                                      ││  ○ Redis       Pending                       │"
"│                                                                      ││  ○ Redpanda    Pending                       │"
"│                                                                      │└──────────────────────────────────────────────┘"
"│                                                                      │┌ [3] RESOURCES (0) ───────────────────────────┐"
"│                                                                      ││                                              │"
"│                                                                      ││  No resources yet.                           │"
"│                                                                      ││  Waiting for infrastructure...               │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"└──────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────────┘"
" Filter: [a]All [w]Watch [i]Infra [s]API [e]Error                                                                       "
" Nav: [1-3]Panel [j/k]Scroll [Enter]Select [Space]Expand [W]Wrap [q]Quit                                                "
